Load and create moods with Ngrx: Actions, Reducers and Effects. DB in memory with extension.

--- a/src/app/moods/containers/mood-add/mood-add.component.html
+++ b/src/app/moods/containers/mood-add/mood-add.component.html
@@ -1,3 +1,6 @@
+<section class="sticky">
+  <a routerLink="/" routerLinkActive="router-link-active" class="button"><span> Back</span></a>
+</section>
 <p>
   mood-add works!
 </p>
