--- a/src/app/shared/components/not-found/not-found.component.html
+++ b/src/app/shared/components/not-found/not-found.component.html
@@ -1,3 +1,3 @@
 <h1>Not Found</h1>
 <h2>404</h2>
-<a routerLink="/">Go home</a>
+<a routerLink="/" routerLinkActive="router-link-active">Go home</a>
